k8s-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simplewebapp
  labels:
    name: simplewebapp
    environment: production
