k8s-manifests/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: simplewebapp
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: simplewebapp
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: frontend
