k8s-manifests/07-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: simplewebapp
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  selector:
    app: frontend
